# TinyMMOClient

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  make_ios_project.sh  make_project.bat  make_project.sh
source_common/: CMakeLists.txt  main.cpp
source_common/editor/: Editor.cpp  Editor.h  EditorImGuiCommands.inc  EditorUtils.h
source_common/editor/commands/: FloodFillCommand.cpp  FloodFillCommand.h  IEditorCommand.h  NavmapTileTypeFloodFillCommand.cpp  NavmapTileTypeFloodFillCommand.h  PlaceNavmapTileTypeCommand.cpp  PlaceNavmapTileTypeCommand.h  PlaceTileCommand.cpp  PlaceTileCommand.h
source_common/engine/: CoreSystemsEngine.h
source_common/engine/input/: IInputStateManager.h
source_common/engine/rendering/: AnimationManager.cpp  AnimationManager.h  Animations.cpp  Animations.h  Camera.cpp  Camera.h  CommonUniforms.h  Fonts.cpp  Fonts.h  IRenderer.h  OpenGL.h  ParticleManager.cpp  ParticleManager.h  RenderingUtils.cpp  RenderingUtils.h
source_common/engine/resloading/: DataFileLoader.cpp  DataFileLoader.h  DataFileResource.cpp  DataFileResource.h  IResource.h  IResourceLoader.h  ImageSurfaceLoader.cpp  ImageSurfaceLoader.h  ImageSurfaceResource.cpp  ImageSurfaceResource.h  MeshResource.cpp  MeshResource.h  OBJMeshLoader.cpp  OBJMeshLoader.h  ResourceLoadingService.cpp  ResourceLoadingService.h  ShaderLoader.cpp  ShaderLoader.h  ShaderResource.cpp  ShaderResource.h  TextureLoader.cpp  TextureLoader.h  TextureResource.cpp  TextureResource.h
source_common/engine/scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.h  SceneObjectUtils.cpp  SceneObjectUtils.h
source_common/engine/sound/: SoundManager.cpp  SoundManager.h
source_common/engine/utils/: BaseDataFileDeserializer.cpp  BaseDataFileDeserializer.h  BaseDataFileSerializer.cpp  BaseDataFileSerializer.h  FileUtils.h  Logging.cpp  Logging.h  MathUtils.cpp  MathUtils.h  OSMessageBox.h  PlatformMacros.h  SerializationDefinitions.h  StringUtils.h  ThreadSafeQueue.h  TypeTraits.cpp  TypeTraits.h
source_common/game/: AchievementManager.cpp  AchievementManager.h  AnimatedButton.cpp  AnimatedButton.h  AnimatedStatContainer.cpp  AnimatedStatContainer.h  ArtifactProductIds.h  BoardState.h  BoardView.cpp  BoardView.h  CardEffectComponents.h  CardTooltipController.cpp  CardTooltipController.h  CardUtils.cpp  CardUtils.h  Cards.cpp  Cards.h  CastBarController.cpp  CastBarController.h  DataRepository.cpp  DataRepository.h  DebugGameWidgets.cpp  DebugGameWidgets.h  Game.cpp  Game.h  GameCommon.h  GameConstants.h  GameRuleEngine.cpp  GameRuleEngine.h  GameSceneTransitionManager.cpp  GameSceneTransitionManager.h  GameSceneTransitionTypes.h  GameSymbolicGlyphNames.h  GuiObjectManager.cpp  GuiObjectManager.h  IAPProductIds.h  LocalPlayerInputController.cpp  LocalPlayerInputController.h  NetworkEntitySceneObjectFactory.cpp  NetworkEntitySceneObjectFactory.h  (+21 more)
source_common/game/events/: EventSystem.cpp  EventSystem.h  Events.h
source_common/game/gameactions/: BaseGameAction.h  BattleInitialSetupAndAnimationGameAction.cpp  BattleInitialSetupAndAnimationGameAction.h  CardAttackGameAction.cpp  CardAttackGameAction.h  CardBuffedDebuffedAnimationGameAction.cpp  CardBuffedDebuffedAnimationGameAction.h  CardDestructionGameAction.cpp  CardDestructionGameAction.h  CardEffectGameAction.cpp  CardEffectGameAction.h  CardHistoryEntryAdditionGameAction.cpp  CardHistoryEntryAdditionGameAction.h  CardPlayedParticleEffectGameAction.cpp  CardPlayedParticleEffectGameAction.h  DemonPunchGameAction.cpp  DemonPunchGameAction.h  DinoDamageReversalGameAction.cpp  DinoDamageReversalGameAction.h  DrawCardGameAction.cpp  DrawCardGameAction.h  EndTurnTutorialGameAction.cpp  EndTurnTutorialGameAction.h  GameActionEngine.cpp  GameActionEngine.h  GameActionFactory.cpp  GameActionFactory.h  GameOverGameAction.cpp  GameOverGameAction.h  GameOverResurrectionCheckGameAction.cpp  GameOverResurrectionCheckGameAction.h  GoldenCardPlayedEffectGameAction.cpp  GoldenCardPlayedEffectGameAction.h  HealNextDinoDamageGameAction.cpp  HealNextDinoDamageGameAction.h  HeroCardEntryGameAction.cpp  HeroCardEntryGameAction.h  HoundSummoningGameAction.cpp  HoundSummoningGameAction.h  HowToPlayACardTutorialGameAction.cpp  (+34 more)
source_common/game/scenelogicmanagers/: AchievementsSceneLogicManager.cpp  AchievementsSceneLogicManager.h  BattleSceneLogicManager.cpp  BattleSceneLogicManager.h  BunnyHopSceneLogicManager.cpp  BunnyHopSceneLogicManager.h  CardInspectionSceneLogicManager.cpp  CardInspectionSceneLogicManager.h  CardLibrarySceneLogicManager.cpp  CardLibrarySceneLogicManager.h  CardPackRewardSceneLogicManager.cpp  CardPackRewardSceneLogicManager.h  CardSelectionRewardSceneLogicManager.cpp  CardSelectionRewardSceneLogicManager.h  CloudDataConfirmationSceneLogicManager.cpp  CloudDataConfirmationSceneLogicManager.h  CreditsSceneLogicManager.cpp  CreditsSceneLogicManager.h  DefeatSceneLogicManager.cpp  DefeatSceneLogicManager.h  DisconnectedSceneLogicManager.cpp  DisconnectedSceneLogicManager.h  EventSceneLogicManager.cpp  EventSceneLogicManager.h  FirstGameLockSceneLogicManager.cpp  FirstGameLockSceneLogicManager.h  GiftCodeClaimSceneLogicManager.cpp  GiftCodeClaimSceneLogicManager.h  ISceneLogicManager.h  InventorySceneLogicManager.cpp  InventorySceneLogicManager.h  LoadingSceneLogicManager.cpp  LoadingSceneLogicManager.h  MainMenuSceneLogicManager.cpp  MainMenuSceneLogicManager.h  PrivacyPolicySceneLogicManager.cpp  PrivacyPolicySceneLogicManager.h  PurchasingProductSceneLogicManager.cpp  PurchasingProductSceneLogicManager.h  ReleaseNotesSceneLogicManager.cpp  (+17 more)
source_common/game/ui/: AnimatedButton.cpp  AnimatedButton.h  FillableBar.cpp  (+1 more)
source_common/imgui/: imgui.cpp  imgui.h
source_common/map/: GlobalMapDataRepository.cpp  GlobalMapDataRepository.h  MapConstants.h  MapResourceController.cpp  MapResourceController.h
source_test/: CMakeLists.txt  main.cpp
source_test/game/: GameSceneTransitionManagerTest.cpp
source_test/net_common/: BestHandFinderTest.cpp  BoardTest.cpp  CardTest.cpp  HandComparisonTest.cpp
(+155 files in other folders)
